# ROS----Slam-Open-CV-Navigation

./: README.md
src/src/wpb_home/wpb_home_bringup/launch/: js_ctrl.launch
src/src/wpb_home/wpb_home_bringup/urdf/: wpb_home.urdf
src/src/wpb_home/wpb_home_tutorials/: CMakeLists.txt
src/src/wpb_home/wpbh_local_planner/src/: CLidarAC.cpp  wpbh_local_planner.cpp
src/src/wpr_simulation/: CMakeLists.txt
src/src/wpr_simulation/include/wpr_simulation/: wpr_plugin.h
src/src/wpr_simulation/launch/: wpb_navigation.launch
src/src/wpr_simulation/maps/: map.yaml  save_map.sh
src/src/wpr_simulation/meshes/person/: standing.dae  standingv2.dae
src/src/wpr_simulation/models/: kai_standing.model  person_standing.model  wpb_home.model
src/src/wpr_simulation/src/: demo_cv_face_detect.cpp  keyboard_vel_ctrl.cpp
src/src/wpr_simulation/worlds/: robocup_home.world
